--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     -->
     <title>React Template for Startups</title>
   </head>
-  <body>
+  <body class="has-animations">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="body-wrap"></div>
   </body>
 </html>
